<resources>
    <string name="app_name">SignUp</string>
    <string name="sign_up">Sign Up</string>
    <string name="create_your_account">Create your account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password_helper">At least 8 characters, one uppercase, one number</string>
    <string name="error_icon">Error icon</string>
    <string name="retry">Retry</string>
</resources>
